src/tests/testfiles/function-calls/parameter-type-11.txt
Error at 6:5: Format 'f' expects argument of type 'float', but argument 3 has type 'int'
printf("test %c, %f \n", '1', 10);
^
Error at 7:5: Format 'c' expects argument of type 'char', but argument 2 has type 'int'
printf("test %c, %5f \n", 2, 23.948984);
^
Error at 8:5: Format 'i' expects argument of type 'int', but argument 3 has type 'char []'
printf("test %c, %i, %7f \n", '3', "528439789", 353332.53523);
^
Error at 11:5: Format 'f' expects argument of type 'float', but argument 4 has type 'int'
printf("%c%s%f%i%d%f%i%c%s", 'h', "ello", 314, 666, 42.0, 123.456, "789", '0', "1234565789");
^
Error at 11:5: Format 'd' expects argument of type 'int', but argument 6 has type 'float'
printf("%c%s%f%i%d%f%i%c%s", 'h', "ello", 314, 666, 42.0, 123.456, "789", '0', "1234565789");
^
Error at 11:5: Format 'i' expects argument of type 'int', but argument 8 has type 'char []'
printf("%c%s%f%i%d%f%i%c%s", 'h', "ello", 314, 666, 42.0, 123.456, "789", '0', "1234565789");
^
